=== Deluge 1.2.0 (In Development) ===
==== Core ====
  * Implement new RPC protocol DelugeRPC replacing XMLRPC
  * Move to a twisted framework

==== GtkUI ====
  * Remove SignalReceiver
  * Implemented a cross-platform IPC method thus removing the DBUS dependency
  * Implement a "True" Classic Mode where there is no longer a separate daemon process

==== WebUI ====
  * Move over to using Twisted-Web for the webserver.
  * Move to only AJAX interface built upon Ext-JS.

=== Deluge 1.1.0 (Released) ===
==== Core ====
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * Filter Manager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)
  * Remove remaining gtk functions in common
  * Tracker icons.
  * Add ETA for torrents with stop at seed ratio set
  * Fix #47 the state and config files are no longer invalidated when there is no diskspace
  * Fix #619 return "" instead of "Infinity" if seconds == 0 in ftime
  * Add -P, --pidfile option to deluged

==== GtkUI ====
  * Add peer progress to the peers tab
  * Add ability to manually add peers
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog
  * Redesiged sidebar with filters for Active and Tracker (see Filter Manager)
  * Implement #428 the ability to rename files and directories
  * Implement #229 add date added column
  * Implement #596 show speeds in title
  * Fix #636 not setting the daemon's config directory when using --config= with the UI in classic mode.
  * Fix #624 do not allow changing file priorities when using compact allocation