@@ -50,7 +50,8 @@ class DetailsTab(Tab):
             (glade.get_widget("summary_tracker"), None, ("tracker",)),
             (glade.get_widget("summary_torrent_path"), None, ("save_path",)),
             (glade.get_widget("summary_message"), str, ("message",)),
-            (glade.get_widget("summary_hash"), str, ("hash",))
+            (glade.get_widget("summary_hash"), str, ("hash",)),
+            (glade.get_widget("summary_comments"), str, ("comment",))
         ]
 
     def update(self):
@@ -67,7 +68,7 @@ class DetailsTab(Tab):
 
         # Get the torrent status
         status_keys = ["name", "total_size", "num_files",
-            "tracker", "save_path", "message", "hash"]
+            "tracker", "save_path", "message", "hash", "comment"]
 
         client.core.get_torrent_status(selected, status_keys).addCallback(self._on_get_torrent_status)
 
